@@ -4,6 +4,8 @@
 	* win/cat.c        to reality. See for what's missing:
 	* win/tcl.m4       <https://sourceforge.net/apps/trac/mingw-w64/wiki/Unicode%20apps>
 	* win/configure    (re-generated)
+	* win/tclWinPort.h [Bug #3110161]: Extensions using TCHAR don't compile
+	on VS2005 SP1
 
 2010-11-15  Andreas Kupries  <andreask@activestate.com>
 
